syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.abin.lee.grpc.rpc.service";
option java_outer_classname = "OrderServiceProto";

message OrderRequest {
	string recipient = 1;
    string title = 2;
    string content = 3;
}

message OrderResponse {
	int32 code = 1;
	string msg = 2;
}

service OrderService {
    rpc createOrder (OrderRequest) returns (OrderResponse) {}

}








